@@ -1,3 +1,5 @@
+2006/1/3 -- released version 20060103_trunk
+
 2006/1/2 -- released version 20060102_trunk
 
 2006/1/1 -- released version 20060101_trunk
